# jupytext

./: .gitignore  Cargo.toml  dist-workspace.toml
.github/workflows/: release-pypi.yml  release-rust.yml
benches/: benchmarks.rs  compare.sh  gen_notebooks.py
pypi/: pyproject.toml
src/: main.rs
src/lib/: cell_metadata.rs  cell_reader.rs  cell_to_text.rs  cli.rs  combine.rs  compare.rs  config.rs  formats.rs  header.rs  jupytext.rs  languages.rs  lib.rs  magics.rs  metadata_filter.rs  myst.rs  notebook.rs  paired_paths.rs  pep8.rs  string_parser.rs
tests/: round_trip_tests.rs  unit_tests.rs
