[package]
name = "jupytext"
version = "0.1.0"
edition = "2021"
description = "Convert Jupyter notebooks to/from text formats (Rust implementation)"
license = "MIT"

[[bin]]
name = "jupytext"
path = "src/main.rs"

[lib]
name = "jupytext"
path = "src/lib/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
thiserror = "2"
anyhow = "1"
toml = "0.8"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
