[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "jupytext-rs"
version = "0.2.0"
description = "Fast Jupyter notebook converter (Rust implementation of jupytext)"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Spencer Lyon"},
]
keywords = ["jupyter", "notebook", "markdown", "conversion"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/sglyon/jupytext"
Repository = "https://github.com/sglyon/jupytext"

[tool.maturin]
bindings = "bin"
manifest-path = "../Cargo.toml"
strip = true
locked = true
